--- a/inforest/index.html
+++ b/inforest/index.html
@@ -1,41 +1,31 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
-	<title>InForest | alejandro</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<!--[if lte IE 8]><script src="../assets/js/ie/html5shiv.js"></script><![endif]-->
+  <title>InForest | alejandro</title>
+  <meta charset="utf-8">
+  <meta name="description" content="Portfolio of Alejandro Wang">
+  <meta name="author" content="Alejandro Wang">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="format-detection" content="telephone=no">
 
-	<link rel="stylesheet" href="../assets/css/normalize.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link rel="stylesheet" href="../assets/css/preloader.css">
-	<link rel="stylesheet" href="../assets/css/font.css">
-	<link rel="stylesheet" href="../assets/css/works.css">
+  <link rel="stylesheet" href="../assets/css/normalize.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="../assets/css/font.css">
+  <link rel="stylesheet" href="../assets/css/works.css">
 
-	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh5U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-	<script src="../assets/js/preloader.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116480014-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-	<script src="../assets/js/jquery.scrollex.min.js"></script>
-	<script src="../assets/js/jquery.scrolly.min.js"></script>
-	<script src="../assets/js/skel.min.js"></script>
-	<script src="../assets/js/util.js"></script>
-	<script src="../assets/js/works.js"></script>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
 
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116480014-1"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-
-		function gtag() {
-			dataLayer.push(arguments);
-		}
-		gtag('js', new Date());
-
-		gtag('config', 'UA-116480014-1');
-	</script>
+    gtag('config', 'UA-116480014-1');
+  </script>
 </head>
 
 <body>
@@ -49,9 +39,9 @@
 
 		<!-- Header -->
 		<header>
-			<div class="image banner"><img src="images/header.png" alt="" />
+			<div class="image banner"><img src="images/header.png" alt="background" />
 				<div class="slogan">
-					<h2>InForest : Everyone in the haze <br> has a dream of forest</h2>
+					<h2>InForest :<br> Everyone in the haze <br> has a dream of forest</h2>
 					<p>A forest-like space with botanic interactive system arousing urban people the sensation of the forest. <br></p>
 				</div>
 			</div>
@@ -59,9 +49,9 @@
 
 		<!-- Nav -->
 		<nav id="nav">
-			<a class="nav-home" href="http://alej.wang">_ alejandro.wang</a>
+			  <p> <a class="nav-home" href="http://alej.wang">_ alejandro.wang</a><span id="nav-titlename"> : inforest space</span></p>
 				<ul class="nav-tab">
-					<li><a href="#intro" class="active">intro</a></li>
+					<li><a href="#intro">intro</a></li>
 					<li><a href="#tech_research">tech research</a></li>
 					<li><a href="#conception">conception</a></li>
 					<li><a href="#prototype">prototype</a></li>
@@ -91,7 +81,7 @@
 		<section id="intro">
 			<h3>_introducing</h3>
 			<h4>the forest is disappearing <br>and the urban citizens are lost</h4>
-			<span class="image full"><img src="images/inforest_intro.png" alt="" /></span>
+			<span class="image full"><img src="images/inforest_intro.png" alt="intro" /></span>
 			<div class="row">
 				<div class="col-md-8 offset-md-4">
 					<p>People need the forest. For people who forgot already, we should let them remember the feeling of nature. </p>
@@ -100,13 +90,13 @@
 					<p>Our work started with analyzing the vertical structure of the forest which contributes to people’ s multi-layer sensory experience in the forest. Then we abstracted specific sounds from each layer of the following design. </p>
 				</div>
 				<div class="col-md-4 offset-md-4">
-					<span class="image alt"><img src="images/inforest_urban.png" alt="" /></span>
+					<span class="image alt"><img src="images/inforest_urban.png" alt="urbanization" /></span>
 					<h5>urbanization + nature = ?</h5>
 					<p>China is experiencing the fastest and highest urbanization in the world, which leaves many thorny nature problems like air pollution, dense traffic, and more notably increasing pressure on people. Not surprisingly, urban people are eager to get away
 						from cities and get close to the wild nature without haze once they have a chance. </p>
 				</div>
 				<div class="col-md-4">
-					<span class="image alt"><img src="images/inforest_screen.png" alt="" /></span>
+					<span class="image alt"><img src="images/inforest_screen.png" alt="interaction out of screens" /></span>
 					<h5>interaction = screen ?</h5>
 					<p>As informative transformation goes further and more profound, whereas ubiquitous screen-based user interfaces have profoundly changed people’s lives, it is estranging people from the real physical world. This context urges me to rethink interaction
 						design on a more significant scale-to design interactive system or environment where people are naturally immersed in. </p>
@@ -122,7 +112,7 @@
 			<h4>we use technology from Disney + CMU <br>to inspire us to capture small signals <br>created by touching the plants</h4>
 			<div class="row">
 				<div class="col-md-8 offset-md-4">
-					<span class="image full"><img src="images/inforest_principle.png" alt="" /></span>
+					<span class="image full"><img src="images/inforest_principle.png" alt="technology" /></span>
 					<p>We use the technology called Swept Frequency Capacitive Sensing Technique from Disney Research and Carnegie Mellon University (Touché: Enhancing Touch Interaction on Humans, Screens, Liquids, and Everyday Objects) </p>
 					<p>To build the sensing system, a single conductive wire links the soil or water to our sensor controller. Through dynamic signal analysis, the sensing system could detect and recognize people’s different interactions (e.g., approach, touch, etc.) with
 						plants.
@@ -132,7 +122,7 @@
 			<hr>
 
 			<h4>then by gestures classification experiment, <br>we selected suitable plants and <br>got valuable coefficient in results</h4>
-			<span class="image full"><img src="images/inforest_exp.png" alt="" /></span>
+			<span class="image full"><img src="images/inforest_exp.png" alt="experiment" /></span>
 			<div class="row">
 				<div class="col-md-8 offset-md-4">
 					<p>Gestures classification was the next step to enhance plants with rich touch and gesture interactivity. Each transmission from the sensor contained a 160-point capacitive profile from which we extracted a series of features for classification.
@@ -150,7 +140,7 @@
 			<h4>by designing different interaction on different height,<br> Inforest tend to simulate the nature's feeling</h4>
 			<div class="row">
 				<div class="col-md-8 offset-md-4">
-					<span class="image full"><img src="images/inforest_levels.png" alt="" /></span>
+					<span class="image full"><img src="images/inforest_levels.png" alt="interactions on levels" /></span>
 					<div class="row">
 						<div class="col-md-6">
 
@@ -187,10 +177,10 @@
 
 			<div class="row">
 				<div class="col-md-6">
-					<span class="image full"><img src="images/inforest_pro0.png" alt="" /></span>
+					<span class="image full"><img src="images/inforest_pro0.png" alt="prototype" /></span>
 				</div>
 				<div class="col-md-6">
-					<span class="image full"><img src="images/inforest_pro1.png" alt="" /></span>
+					<span class="image full"><img src="images/inforest_pro1.png" alt="prototype2" /></span>
 				</div>
 				<div class="col-md-8 offset-md-4">
 					<p>The unit is designed to be low-cost and convenient to maintain and water plants. Also, it can be extended as long as the hanging hook is long enough.</p>
@@ -201,13 +191,13 @@
 
 			<div class="row">
 				<div class="col-md-8 offset-md-4">
-					<span class="image full"><img src="images/inforest_model0.png" alt="" /></span>
+					<span class="image full"><img src="images/inforest_model0.png" alt="model1" /></span>
 					<div class="row">
 						<div class="col-md-6">
-							<span class="image full"><img src="images/inforest_model1.jpg" alt="" /></span>
+							<span class="image full"><img src="images/inforest_model1.jpg" alt="model2" /></span>
 						</div>
 						<div class="col-md-6">
-							<span class="image full"><img src="images/inforest_model2.jpg" alt="" /></span>
+							<span class="image full"><img src="images/inforest_model2.jpg" alt="model3" /></span>
 							<p>Model only.</p>
 						</div>
 					</div>
@@ -221,8 +211,8 @@
 			<h3>_result</h3>
 			<h4>Although we didn't have the power to <br>build an architecture to provide an immersive experience, <br>
 							we believe our ideas will present our vision <br>and engage more people to work on the forest issue</h4>
-			<span class="image full"><img src="images/inforest_hand.png" alt="" /></span>
-			<span class="image full"><img src="images/inforest_publish.jpg" alt="" /></span>
+			<span class="image full"><img src="images/inforest_hand.png" alt="handmaking" /></span>
+			<span class="image full"><img src="images/inforest_publish.jpg" alt="publish!" /></span>
 			<div class="row">
 				<div class="col-md-8 offset-md-4">
 					<p>Inforest was published as a conception design on DIP 2016 "The future we design".</p>
@@ -234,38 +224,52 @@
 	</div>
 
 	<!-- Footer -->
-	<footer id="footer">
+	<footer>
 		<p class="links">
 			<a href="../mobile/">Qiushichao Mobile</a>
+      <a href="../empjoy/">Inneref / Empjoy</a>
+      <a href="../smartpill/">SmartPill</a>
 			<a href="../civicrm/">CiviCRM<sup>nz</sup></a>
-			<a href="../smartpill/">SmartPill</a>
 			<a href="../inforest/">InForest Space</a>
 			<a href="../edge/">The Edge : Animal Shelter Design</a>
-			<a href="../#footer-p">About Alejandro Wang</a>
 			<a href="../index.html">All Projects</a>
 		</p>
-		<p class="copyright">&copy; Alejandro Wang</p>
+		<p class="copyright">© Alejandro | Follow me </p>
+		<a href="https://www.instagram.com/alejwang/"><i class="fab fa-instagram"></i></a>
+		<a href="https://www.github.com/alejwang"> <i class="fab fa-github"></i></a>
+		<a href="https://www.linkedin.com/in/alejwang"> <i class="fab fa-linkedin-in"></i></a>
 	</footer>
+  
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
+  <script src="../assets/js/main.js"></script>
+  <script src="../assets/js/jquery.nav.js"></script>
+  <script>
+    $(document).ready(function() {
+      var stickyOffsetTop = $('#nav').offset().top;
+      $('#nav-titlename').hide();
 
-	</div>
+      $(window).bind('scroll', function() {
+        if ($(window).scrollTop() > stickyOffsetTop) {
+          $('#nav').addClass('sticky');
+          $('#nav').css('background-color', 'rgba(255, 255, 255, 0.9)');
+          $('#nav').css('padding', '0 10%');
+          $('#nav-titlename').show();
+        } else {
+          $('#nav').removeClass('sticky');
+          $('#nav').css('background-color', 'transparent');
+          $('#nav').css('padding', '0 2.5em');
+          $('#nav-titlename').hide();
+        }
+      });
 
-	<script>
-
-	var stickyOffsetTop = $('#nav').offset().top;
-
-	$(window).bind('scroll', function () {
-	    if ($(window).scrollTop() > stickyOffsetTop) {
-	        $('#nav').addClass('sticky');
-					$('#nav').css('background-color', '#ffffff');
-					$('#nav').css('padding', '0 5em');
-	    } else {
-	        $('#nav').removeClass('sticky');
-					$('#nav').css('background-color', '#transparent');
-					$('#nav').css('padding', '0 2.5em');
-	    }
-	});
-
-	</script>
+      $('.nav-tab').onePageNav({
+        currentClass: 'active'
+      });
+    });
+  </script>
 </body>
 
 </html>
