--- a/smartpill/index.html
+++ b/smartpill/index.html
@@ -1,169 +1,189 @@
-<!DOCTYPE HTML>
-<!--
-	Stellar by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-	<title>Smartpill | alejandro</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<!--[if lte IE 8]><script src="../assets/js/ie/html5shiv.js"></script><![endif]-->
-	<link rel="stylesheet" href="../assets/css/works.css" />
-	<link rel="stylesheet" href="../assets/css/font.css" />
-	<!--[if lte IE 9]><link rel="stylesheet" href="../assets/css/ie9.css" /><![endif]-->
-	<!--[if lte IE 8]><link rel="stylesheet" href="../assets/css/ie8.css" /><![endif]-->
-	<script src="../assets/js/jquery.min.js"></script>
-	<script src="../assets/js/jquery.scrollex.min.js"></script>
-	<script src="../assets/js/jquery.scrolly.min.js"></script>
-	<script src="../assets/js/skel.min.js"></script>
-	<script src="../assets/js/util.js"></script>
-	<!--[if lte IE 8]><script src="../assets/js/ie/respond.min.js"></script><![endif]-->
-	<script src="../assets/js/works.js"></script>
-	<link rel="stylesheet" href="../assets/css/preloader.css">
-	<script src="../assets/js/main.js"></script>
+  <title>SmartPill | alejandro</title>
+  <meta charset="utf-8">
+  <meta name="description" content="Portfolio of Alejandro Wang">
+  <meta name="author" content="Alejandro Wang">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="format-detection" content="telephone=no">
+
+  <link rel="stylesheet" href="../assets/css/normalize.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="../assets/css/font.css">
+  <link rel="stylesheet" href="../assets/css/works.css">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116480014-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-116480014-1');
+  </script>
 </head>
 
 <body>
 
+  <div id="preloader-container">
+    <div id="preloader"></div>
+  </div>
 
-	  <div id="preloader-container">
-	    <div id="preloader"></div>
-	  </div>
+  <div id="main" class="container-fluid">
+    <header>
+      <div class="image banner smartpill"><img src="images/header.png" alt="background" />
+        <div class="slogan">
+          <h2>SmartPill :<br> Self-diagnostics For <br>Slight Disease Patients</h2>
+          <p>New-style business model providing self-diagnostics and drug use inquiry services for not serious patients</p>
+        </div>
+      </div>
+    </header>
 
-	<!-- Wrapper -->
-	<div id="wrapper">
+    <nav id="nav">
+      <p> <a class="nav-home" href="http://alej.wang">_ alejandro.wang</a><span id="nav-titlename"> : smartpill</span></p>
+      <ul class="nav-tab">
+        <li><a href="#intro">intro</a></li>
+        <li><a href="#analysis">analysis</a></li>
+        <li><a href="#model">model</a></li>
+        <li><a href="#strategy">strategy</a></li>
+        <li><a href="#wireframe">wireframe</a></li>
+      </ul>
+    </nav>
 
-		<!-- Header -->
-		<header id="header" class="smartpill alt">
-			<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
-			<h1>Pocket Pharmacist</h1>
-			<p>Smartpill - new-style business model providing <br> self-diagnostics and drug use inquiry services for not serious patients <br> </p>
-		</header>
-		<section id="header-img" class="smartpill main">
-			<span class="image main"><img src="images/smartpill_header.png" alt="" /></span>
-		</section>
+    <section id="info">
+      <div class="row">
+        <div class="col-sm-12 col-md-6">
+          <p><strong>_role</strong> As the team leader, I conducted business research with my teammates together to come up with market positioning, business model innovation and marketing strategy. I was in charge of the project progress, information structure
+            and presentation.
+          </p>
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <ul>
+            <li><strong>_duration</strong> 3/ 2015 - 6/ 2015.</li>
+            <li><strong>_course</strong> Chinese Business Culture and Entrepreneurship, Zhejiang University</li>
+            <li><strong>_partners</strong> Maggie Long, Zheng Shen, Yan Li</li>
+            <li><strong>_scope</strong> Research, Business Process Design, Strategy, UI Design</li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
-		<!-- Nav -->
-		<nav id="nav" class="smartpill">
-			<ul>
-				<li><a href="#intro" class="active">intro</a></li>
-				<li><a href="#analysis">analysis</a></li>
-				<li><a href="#model">model</a></li>
-				<li><a href="#strategy">strategy</a></li>
-				<li><a href="#wireframe">wireframe</a></li>
-			</ul>
-		</nav>
+    <section id="intro">
+      <h3>_introducing</h3>
+      <h4>China's hospital medical resourse is scarce <br>and the young generation usually don't go to hospital, <br>that's why pharmacist became important</h4>
+      <div class="row">
+        <div class="col-md-8 offset-md-4">
+          <p>China's hospital medical resourse is scarce to afford billions people's daily health care. According to the research in 2014, the number of doctors per 10000 citizen was only 21 and the average waiting time in 3A hospital was half an hour. The
+            bad condition brings patients miserable experience and risk to give wrong diagnose. </p>
+          <p>The youngs in China is becoming unwilling to go to hospital and wait in long queue if they feel not that bad. To deal with sight illness or their occupational disease, they buy themselves pills by parents' experience or searching on the Internet.
+            But both way are not safe. Cold with similar symptom can be the wind-cold, wind-heat or rheumatism-cold type which mess people deeply. With increasing mobile medical market and new technology, there should be a better way to improve the experience
+            and accuracy in self-diagnostics. </p>
+        </div>
+      </div>
+      <hr>
+      <h4>so we came up with the idea for patents <br>to create or get possible medical resourse <br>on their phone with Smartpill</h4>
+      <p><a href="#model">skip to see the model ></a></p>
+    </section>
 
-		<!-- Main -->
-		<div id="main">
+    <section id="analysis">
+      <h3>_market analysis</h3>
+      <h4>before we started, we need to analysis <br>the pest + market resources to make sure <br>if there's a possible market</h4>
+      <div class="row">
+        <div class="col-md-8 offset-md-4">
+          <span class="image full"><img src="images/smartpill_pest0.png" alt="" /></span>
+          <span class="image full"><img src="images/smartpill_pest1.png" alt="" /></span>
+          <p><sup>*1 There is no specific law in mobile medical care in China. I use standards by FDA in the U.S. to classify apps in China.</sup></p>
+          <p><sup>*2 With traditional Chinese diagnostics, patients are more focus on their symptom instead of body index data. But most patients are likely to use western medicine.</sup></p>
+        </div>
+      </div>
 
-			<section id="info" class="main">
+      <hr>
+      <h4>then we started to dig in <br>who can we serve and,<br>what can Smartpill do in capability </h4>
+      <span class="image full"><img src="images/smartpill_target.png" alt="" /></span>
+      <hr>
+      <h4>in a word, <br>SmartPill offers self-diagnostics <br>and drug use inquiry services <br>for the young and mid-aged patients <br>with slight or chronic disease</h4>
 
-				<div class="row">
-					<div class="6u 12u$(medium)">
-						<p><strong>_role</strong> As the team leader, I conducted business research with my teammates together to come up with market positioning, business model innovation and marketing strategy. I was in charge of the project progress, information structure
-							and presentation.
-						</p>
-					</div>
-					<div class="6u$ 12u$(medium)">
-						<ul class="alt">
-							<li><strong>_duration</strong> 3/ 2015 - 6/ 2015.</li>
-							<li><strong>_course</strong> Chinese Business Culture and Entrepreneurship, Zhejiang University</li>
-							<li><strong>_partners</strong> Maggie Long, Zheng Shen, Yan Li</li>
-							<li><strong>_scope</strong> Research, Business Process Design, Strategy, UI Design</li>
-						</ul>
-					</div>
-				</div>
-			</section>
+    </section>
 
-			<!-- Intro -->
-			<section id="intro" class="main">
-				<h2>_introducing</h2>
-				<h3>China's hospital medical resourse is scarce <br>and the young generation usually don't go to hospital, <br>that's why pharmacist became important</h3>
-				<div class="row">
-					<div class="9u$ -3u 12u$(medium)">
-						<p>China's hospital medical resourse is scarce to afford billions people's daily health care. According to the research in 2014, the number of doctors per 10000 citizen was only 21 and the average waiting time in 3A hospital was half an hour. The bad
-							condition brings patients miserable experience and risk to give wrong diagnose. </p>
-						<p>The youngs in China is becoming unwilling to go to hospital and wait in long queue if they feel not that bad. To deal with sight illness or their occupational disease, they buy themselves pills by parents' experience or searching on the Internet.
-							But both way are not safe. Cold with similar symptom can be the wind-cold, wind-heat or rheumatism-cold type which mess people deeply. With increasing mobile medical market and new technology, there should be a better way to improve the experience
-							and accuracy in self-diagnostics. </p>
-					</div>
-				</div>
-				<hr>
-				<h3>so we came up with the idea for patents <br>to create or get possible medical resourse <br>on their phone with Smartpill</h3>
-				<p><a href="#model">skip to see the model ></a></p>
-			</section>
+    <section id="model" class="main black-bg">
+      <h3>_business model innovation</h3>
+      <h4 class="grey">we spent a semester on business analysis <br>to make a more complete model <br>with possible resources </h4>
+      <span class="image full"><img src="images/smartpill_model.png" alt="" /></span>
+      <hr>
+      <h4 class="grey">as shown, we expand the partners to <br>medical companies and pharmacist union to <br>provide stable service and <br>collect more information in diagnostics database</h4>
+    </section>
 
-			<!-- Analysis -->
-			<section id="analysis" class="main">
-				<h2>_market analysis</h2>
-				<h3>before we started, we need to analysis <br>the pest + market resources to make sure <br>if there's a possible market</h3>
-				<div class="row">
-					<div class="8u$ -4u 12u$(medium)">
-						<span class="image alt"><img src="images/smartpill_pest0.png" alt="" /></span>
-						<span class="image alt"><img src="images/smartpill_pest1.png" alt="" /></span>
-						<p><sup>*1 There is no specific law in mobile medical care in China. I use standards by FDA in the U.S. to classify apps in China.</sup></p>
-						<p><sup>*2 With traditional Chinese diagnostics, patients are more focus on their symptom instead of body index data. But most patients are likely to use western medicine.</sup></p>
-					</div>
-				</div>
+    <section id="strategy">
+      <h3>_strategy</h3>
+      <h4>by market research and survey, <br>we designed a marketing strategy in 4P frame <br>to make sure our target users are accurate</h4>
+      <span class="image full"><img src="images/smartpill_strategy.png" alt="" /></span>
+    </section>
 
-				<hr>
-				<h3>then we started to dig in <br>who can we serve and,<br>what can Smartpill do in capability </h3>
-				<span class="image alt"><img src="images/smartpill_target.png" alt="" /></span>
-				<hr>
-				<h3>in a word, <br>SmartPill offers self-diagnostics <br>and drug use inquiry services <br>for the young and mid-aged patients <br>with slight or chronic disease</h3>
+    <section id="wireframe">
+      <h3>_wireframe</h3>
+      <h4>to make it easy to understand, <br>we made a simple wireframe </h4>
+      <div class="row">
+        <div class="col-md-8 offset-md-4">
+          <span class="image full"><img src="images/smartpill_wf0.png" alt="" /></span>
+          <span class="image full"><img src="images/smartpill_wf1.png" alt="" /></span>
+        </div>
+      </div>
+    </section>
 
-			</section>
+  </div>
 
-			<!-- business model -->
-			<section id="model" class="main black-bg">
-				<h2>_business model innovation</h2>
-				<h3 class="grey">we spent a semester on business analysis <br>to make a more complete model <br>with possible resources </h3>
-				<span class="image alt"><img src="images/smartpill_model.png" alt="" /></span>
-				<hr>
-				<h3 class="grey">as shown, we expand the partners to <br>medical companies and pharmacist union to <br>provide stable service and <br>collect more information in diagnostics database</h3>
-			</section>
+  <!-- Footer -->
+  <footer>
+    <p class="links">
+      <a href="../mobile/">Qiushichao Mobile</a>
+      <a href="../empjoy/">Inneref / Empjoy</a>
+      <a href="../smartpill/">SmartPill</a>
+      <a href="../civicrm/">CiviCRM<sup>nz</sup></a>
+      <a href="../inforest/">InForest Space</a>
+      <a href="../edge/">The Edge : Animal Shelter Design</a>
+      <a href="../index.html">All Projects</a>
+    </p>
+    <p class="copyright">© Alejandro | Follow me </p>
+    <a href="https://www.instagram.com/alejwang/"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.github.com/alejwang"> <i class="fab fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/alejwang"> <i class="fab fa-linkedin-in"></i></a>
+  </footer>
 
-			<!-- strategy -->
-			<section id="strategy" class="main">
-				<h2>_strategy</h2>
-				<h3>by market research and survey, <br>we designed a marketing strategy in 4P frame <br>to make sure our target users are accurate</h3>
-				<span class="image alt"><img src="images/smartpill_strategy.png" alt="" /></span>
-			</section>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
+  <script src="../assets/js/main.js"></script>
+  <script src="../assets/js/jquery.nav.js"></script>
+  <script>
+    $(document).ready(function() {
+      var stickyOffsetTop = $('#nav').offset().top;
+      $('#nav-titlename').hide();
 
-			<!-- wireframe -->
-			<section id="wireframe" class="main">
-				<h2>_wireframe</h2>
-				<h3>to make it easy to understand, <br>we made a simple wireframe </h3>
-				<div class="row">
-					<div class="9u$ -3u 12u$(medium)">
-						<span class="image alt"><img src="images/smartpill_wf0.png" alt="" /></span>
-						<span class="image alt"><img src="images/smartpill_wf1.png" alt="" /></span>
-					</div>
-				</div>
-			</section>
+      $(window).bind('scroll', function() {
+        if ($(window).scrollTop() > stickyOffsetTop) {
+          $('#nav').addClass('sticky');
+          $('#nav').css('background-color', 'rgba(255, 255, 255, 0.9)');
+          $('#nav').css('padding', '0 10%');
+          $('#nav-titlename').show();
+        } else {
+          $('#nav').removeClass('sticky');
+          $('#nav').css('background-color', 'transparent');
+          $('#nav').css('padding', '0 2.5em');
+          $('#nav-titlename').hide();
+        }
+      });
 
-
-		</div>
-
-		<!-- Footer -->
-
-		<footer id="footer">
-			<p>
-				<a href="../index.html">
-					< back to home</a>
-			</p>
-			<p class="right"> <a href="../mobile/">next project: Inforest ></a> </p>
-
-			<p class="copyright">&copy; Alejandro. Special thanks to <a href="https://html5up.net">HTML5 UP</a>.</p>
-		</footer>
-
-	</div>
-
-
+      $('.nav-tab').onePageNav({
+        currentClass: 'active'
+      });
+    });
+  </script>
 </body>
 
 </html>
