--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>works _ alejandro</title>
+  <title>_ alejandro</title>
   <meta charset="utf-8">
   <meta name="description" content="Portfolio of Alejandro Wang">
   <meta name="author" content="Alejandro Wang">
@@ -13,12 +13,6 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/font.css">
   <link rel="stylesheet" href="./assets/css/main.css">
-
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
-  <script src="./assets/js/main.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116480014-1"></script>
@@ -46,41 +40,27 @@
   <header>
     <h1>
       _
-      <span class="word-covered">alejandro.wang</span>
-    </h1>
-    <div id="sidenav-trigger">
-      <i class="fas fa-bars"></i>
-    </div>
+      <a href="./index.html"><span class="title-covered">alejandro.wang</span>
+    </a></h1>
+
   </header>
 
-  <nav id="sidenav">
-    <div id="sidenav-close">
-      <i class="fas fa-arrow-left"></i>
-    </div>
-    <ul>
-      <li><a href="./index.html">home</a></li>
-      <li><a href="./works.html" class="active">works</a></li>
-      <li><a href="./about.html">about</a></li>
-      <li><a href="./resume.html">resume</a></li>
-    </ul>
-  </nav>
 
   <div class="content">
-    <nav>
-      <!-- <ul>
-        <li><a href="./index.html">home</a></li>
-        <li><a href="./works.html" class="active">works</a></li>
-        <li><a href="./about.html">about</a></li>
-        <li><a href="./resume.html">resume</a></li>
-      </ul> -->
-    </nav>
+    <div id="self-intro">
+      <p>From real life, to be what's next <br> Studying HCI @ U of Michigan <br> Love both design and coding <br>
+        <a id="handleAbout" href="javascript:void(0)">About me...</a></p>
+    </div>
 
     <div id="right-container">
-      <div class="category">
-        <!-- <span>Test</span> -->
-      </div>
+      <!-- <div class="category mix selected">
+        <span>_SELECTED</span>
+      </div> -->
 
-      <div class="card">
+      <div class="category mix all">
+        <span>_MOBILE</span>
+      </div>
+      <div class="card mix selected all">
         <div class="card-header" id="mobile-title">
           <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#mobile-info" aria-expanded="false" aria-controls="mobile-info">Qiushichao Mobile</h2>
         </div>
@@ -99,84 +79,7 @@
         </div>
       </div>
 
-      <div class="card">
-        <div class="card-header" id="civicrm-title">
-          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#civicrm-info" aria-expanded="false" aria-controls="civicrm-info">CiviCRM<sup>nz</sup></h2>
-        </div>
-        <div id="civicrm-info" class="collapse" aria-labelledby="civicrm-title" data-parent="#right-container" data-image="./images/civicrm-banner.png">
-          <div class="card-body">
-            <h3>_intro</h3>
-            <p>Consulting with Neutral Zone and reshaping experiences <br> of tracking members and programs in CiviCRM system</p>
-            <h3>_duration</h3>
-            <p>9/ 2017 - 12/ 2017 </p>
-            <h3>_course</h3>
-            <p>Contextual Inquiry and Consulting Foundations, University of Michigan</p>
-            <h3>_scope</h3>
-            <p>User Research, Consulting</p>
-            <a class="btn btn-primary" href="./civicrm/" role="button"> Read More > </a>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card-header" id="smartpill-title">
-          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#smartpill-info" aria-expanded="false" aria-controls="smartpill-info">SmartPill</h2>
-        </div>
-        <div id="smartpill-info" class="collapse" aria-labelledby="smartpill-title" data-parent="#right-container" data-image="./images/smartpill-banner.png">
-          <div class="card-body">
-            <h3>_intro</h3>
-            <p>Pocket pharmacist app strategy design with martketing plan <br>for busy patients and chronic disease patients</p>
-            <h3>_duration</h3>
-            <p>3/ 2015 - 6/ 2015 </p>
-            <h3>_course</h3>
-            <p>Chinese Business Culture and Entrepreneurship, Zhejiang University</p>
-            <h3>_scope</h3>
-            <p>Market Research, Business Process Design, Strategy, UI Design</p>
-            <a class="btn btn-primary" href="./smartpill/" role="button"> Read More > </a>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card-header" id="inforest-title">
-          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#inforest-info" aria-expanded="false" aria-controls="inforest-info">InForest Space</h2>
-        </div>
-        <div id="inforest-info" class="collapse" aria-labelledby="inforest-title" data-parent="#right-container" data-image="./images/inforest-banner.png">
-          <div class="card-body">
-            <h3>_intro</h3>
-            <p>Interactive artifact and space design<br>to invoke dreams of forest in heavy city mist</p>
-            <h3>_duration</h3>
-            <p>5/ 2016 - 11/ 2016 </p>
-            <h3>_program</h3>
-            <p>Student Research Training Program, Zhejiang University</p>
-            <h3>_scope</h3>
-            <p>Technology Research, Interaction Design, Architecture Design</p>
-            <a class="btn btn-primary" href="./inforest/" role="button"> Read More > </a>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card-header" id="animal-title">
-          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#animal-info" aria-expanded="false" aria-controls="animal-info">The Edge : Animal Shelter Design</h2>
-        </div>
-        <div id="animal-info" class="collapse" aria-labelledby="animal-title" data-parent="#right-container" data-image="./images/edge-banner.png">
-          <div class="card-body">
-            <h3>_intro</h3>
-            <p>Start with a view of animals <br>make an shelter for us animals <br>all the way from fund to adoption </p>
-            <h3>_duration</h3>
-            <p>9/ 2015 - 11/ 2015 </p>
-            <h3>_course</h3>
-            <p>Architecture Design, Zhejiang University</p>
-            <h3>_scope</h3>
-            <p>'Product' Research, Architecture Design</p>
-            <a class="btn btn-primary" href="./edge/" role="button"> Read More > </a>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="card">
+      <div class="card mix all">
         <div class="card-header" id="inneref-title">
           <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#inneref-info" aria-expanded="false" aria-controls="inneref-info">Inneref / Empjoy</h2>
         </div>
@@ -195,41 +98,134 @@
         </div>
       </div>
 
+      <div class="card mix selected all">
+        <div class="card-header" id="smartpill-title">
+          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#smartpill-info" aria-expanded="false" aria-controls="smartpill-info">SmartPill</h2>
+        </div>
+        <div id="smartpill-info" class="collapse" aria-labelledby="smartpill-title" data-parent="#right-container" data-image="./images/smartpill-banner.png">
+          <div class="card-body">
+            <h3>_intro</h3>
+            <p>Pocket pharmacist app strategy design with martketing plan <br>for busy patients and chronic disease patients</p>
+            <h3>_duration</h3>
+            <p>3/ 2015 - 6/ 2015 </p>
+            <h3>_course</h3>
+            <p>Chinese Business Culture and Entrepreneurship, Zhejiang University</p>
+            <h3>_scope</h3>
+            <p>Market Research, Business Process Design, Strategy, UI Design</p>
+            <a class="btn btn-primary" href="./smartpill/" role="button"> Read More > </a>
+          </div>
+        </div>
+      </div>
 
-      <div class="card">
+      <div class="category mix all">
+        <span>_RESEARCH</span>
+      </div>
+      <div class="card mix all">
+        <div class="card-header" id="civicrm-title">
+          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#civicrm-info" aria-expanded="false" aria-controls="civicrm-info">CiviCRM<sup>nz</sup></h2>
+        </div>
+        <div id="civicrm-info" class="collapse" aria-labelledby="civicrm-title" data-parent="#right-container" data-image="./images/civicrm-banner.png">
+          <div class="card-body">
+            <h3>_intro</h3>
+            <p>Consulting with Neutral Zone and reshaping experiences <br> of tracking members and programs in CiviCRM system</p>
+            <h3>_duration</h3>
+            <p>9/ 2017 - 12/ 2017 </p>
+            <h3>_course</h3>
+            <p>Contextual Inquiry and Consulting Foundations, University of Michigan</p>
+            <h3>_scope</h3>
+            <p>User Research, Consulting</p>
+            <a class="btn btn-primary" href="./civicrm/" role="button"> Read More > </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="category mix all">
+        <span>_ARCHITECTURE</span>
+      </div>
+
+      <div class="card mix selected all">
+        <div class="card-header" id="inforest-title">
+          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#inforest-info" aria-expanded="false" aria-controls="inforest-info">InForest Space</h2>
+        </div>
+        <div id="inforest-info" class="collapse" aria-labelledby="inforest-title" data-parent="#right-container" data-image="./images/inforest-banner.png">
+          <div class="card-body">
+            <h3>_intro</h3>
+            <p>Interactive artifact and space design<br>to invoke dreams of forest in heavy city mist</p>
+            <h3>_duration</h3>
+            <p>5/ 2016 - 11/ 2016 </p>
+            <h3>_program</h3>
+            <p>Student Research Training Program, Zhejiang University</p>
+            <h3>_scope</h3>
+            <p>Technology Research, Interaction Design, Architecture Design</p>
+            <a class="btn btn-primary" href="./inforest/" role="button"> Read More > </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mix all">
+        <div class="card-header" id="animal-title">
+          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#animal-info" aria-expanded="false" aria-controls="animal-info">The Edge : Animal Shelter Design</h2>
+        </div>
+        <div id="animal-info" class="collapse" aria-labelledby="animal-title" data-parent="#right-container" data-image="./images/edge-banner.png">
+          <div class="card-body">
+            <h3>_intro</h3>
+            <p>Start with a view of animals <br>make an shelter for us animals <br>all the way from fund to adoption </p>
+            <h3>_duration</h3>
+            <p>9/ 2015 - 11/ 2015 </p>
+            <h3>_course</h3>
+            <p>Architecture Design, Zhejiang University</p>
+            <h3>_scope</h3>
+            <p>'Product' Research, Architecture Design</p>
+            <a class="btn btn-primary" href="./edge/" role="button"> Read More > </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="category mix all">
+        <span>_ABOUT</span>
+      </div>
+
+      <div class="card mix selected all">
         <div class="card-header" id="about-title">
           <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#about-info" aria-expanded="false" aria-controls="about-info">Alejandro Wang</h2>
         </div>
         <div id="about-info" class="collapse" aria-labelledby="about-title" data-parent="#right-container" data-image="./images/about-banner.png">
           <div class="card-body">
-            <h3>Before</h3>
-
+            <h3>_intro</h3>
+            <p>A synthesized project I've been working on for 24 years.<br>... all right you catch ME!</p>
+            <h3>_history</h3>
             <p>I was a <strong>coder</strong> at the beginning. I was an exploring <strong>architect</strong>. I like combination beauty between technology and design. Because once they being together, the mixing magic can make life easier and joyful. That’s
-              why I am now learning <strong>Human-Computer Interaction at University of Michigan</strong>.</p>
-
-            <p> I started a <strong>start-up</strong> focus on online education in China. The vision of my company Zhimou Tech Inc (the name means intelligence) was to help new coding learners to get on the right track and share ideas with the others by new
-              technology and enjoyable design. As one of the co-founder, I almost did everything - design, coding, networking, advertising, and management. I always want to expand myself with more skills and knowledge. But my focus is still design - the
-              only thing I urge to dig in forever.</p>
-            <h3>Now</h3>
-
-            <p>I am still exploring the world of coding and designing at the same time, especially the method of <strong>interaction design, user research, usability test, prototype and coding</strong> and more at school. By some small projects, I realize
-              my efforts can work out to help local community and organizations. I really enjoy my way of design - help people near me to solve their problems, then push it forward and broader. <strong>To be what’s next</strong>, is a hard thing to say.
-              Even though I realize changing the status quo sometimes hurts, and the ideas won’t come true immediately, to design for a better future never goes wrong.</p>
-
-            <h3>Next</h3>
-
-            <p><strong>Looking for an internship!</strong> Design for me is a curve line with points on it. Instead of drawing tons of points in random order or drawing one point at the time, going through the beautiful line is what I want to achieve.</p>
-            <p>
-              I'm graduating in <strong>April 2019</strong> and looking for open and fun people to work with in summer 2018!</p>
-            <a class="word-colored-orange" href="mailto:alejwang@umich.edu?subject=Hello">Say HI!</a>
+              why I am now learning <strong>Human-Computer Interaction at University of Michigan, Ann Arbor</strong>.</p>
+            <p>I started a <strong>start-up</strong> focus on online education before in China. When I was young, I got help from useful but unusable online tools for learning to code. So the vision of my company Zhimou Tech Inc (the name means intelligence)
+              was to help new coding learners to get on the right track and share ideas with the others by new technology and enjoyable design. As one of the co-founder, I almost did everything - design, coding, networking, advertising, and management.
+              I always want to expand myself with more skills and knowledge. But my focus is still design - the only thing I urge to dig in forever.</p>
+            <h3>_now</h3>
+            <p>I am still exploring the world of coding and designing at the same time, especially the method of <strong>interaction design, user research, usability test, prototype coding</strong> and more at school. By some small projects, I realize my
+              efforts can work out to help local community and organizations. I really enjoy my way of design - help people near me to solve their problems, then push it forward and broader. </p>
+            <p><strong>To be what’s next</strong>, is a hard thing to say. Even though I realize changing the status quo sometimes hurts, and the ideas won’t come true immediately, to design for a better future never goes wrong.</p>
+            <h3>_future</h3>
+            <p>Design for me is a curve line with points on it. Instead of drawing tons of points in random order or drawing one point at the time, going through the beautiful line is what I want to achieve. I'm graduating in <strong>April 2019</strong>              and looking for open and fun people to work with in summer 2018!</p>
+            <a class="btn btn-primary" href="http://alej.wang/assets/file/ZhenWang.pdf"> Download my resume > </a>
+            <a class="btn btn-primary" href="mailto:alejwang@umich.edu?subject=Hello" role="button"> Say Hi > </a>
 
           </div>
         </div>
       </div>
 
+      <div class="category mix selected">
+        <span class="control" data-filter=".all">+ SEE MORE</span>
+      </div>
+
+      <div class="category mix all">
+        <span class="control" data-filter=".selected">- SEE LESS</span>
+      </div>
+
     </div>
+
     <div class="push"></div>
+
   </div>
+
 
   <!-- left down with decoration -->
   <div id="left-decoration">
@@ -242,6 +238,23 @@
     <a href="https://www.github.com/alejwang"> <i class="fab fa-github"></i></a>
     <a href="https://www.linkedin.com/in/alejwang"> <i class="fab fa-linkedin-in"></i></a>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
+  <script src="./assets/js/mixitup.min.js"></script>
+  <script src="./assets/js/main.js"></script>
+  <script>
+    $(document).ready(function() {
+      var mixer = mixitup($('#right-container'), {
+        animation: {
+          duration: 300,
+          effects: 'fade'
+        }
+      });
+      mixer.filter('.selected');
+    })
+  </script>
 
 </body>
 
