Fix tab-index for See More

--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
       </div>
 
       <div class="category mix selected">
-        <span class="control" data-filter=".all">+ SEE MORE</span>
+        <a href="javascript:void(0)" class="control" data-filter=".all">+ SEE MORE</a>
       </div>
 
       <div class="category mix all">
-        <span class="control" data-filter=".selected">- SEE LESS</span>
+        <a href="javascript:void(0)" class="control" data-filter=".selected">- SEE LESS</a>
       </div>
 
     </div>
