--- a/inforest/index.html
+++ b/inforest/index.html
@@ -41,7 +41,7 @@
 		<header>
 			<div class="image banner"><img src="images/header.png" alt="background" />
 				<div class="slogan">
-					<h2>InForest :<br> Everyone in the haze <br> has a dream of forest</h2>
+					<h2>InForest <br> Everyone in the haze <br> has a dream of forest</h2>
 					<p>A forest-like space with botanic interactive system arousing urban people the sensation of the forest. <br></p>
 				</div>
 			</div>
@@ -239,7 +239,7 @@
 		<a href="https://www.github.com/alejwang"> <i class="fab fa-github"></i></a>
 		<a href="https://www.linkedin.com/in/alejwang"> <i class="fab fa-linkedin-in"></i></a>
 	</footer>
-  
+
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
