--- a/index.html
+++ b/index.html
@@ -46,44 +46,69 @@
   </header>
 
 
-  <div class="content">
-    <div id="self-intro">
+  <div class="content" id="content">
+    <!-- <div id="self-intro">
       <p>From real life, to be what's next <br> Studying HCI @ U of Michigan <br> Love both design and coding <br>
         <a id="handleAbout" href="javascript:void(0)">About me...</a></p>
-    </div>
+    </div> -->
 
-    <div id="right-container">
+    <!-- <div id="right-container"> -->
       <!-- <div class="category mix selected">
         <span>_SELECTED</span>
       </div> -->
 
       <div class="category mix all">
-        <span>_UI/UX</span>
+        <span>STORY</span>
       </div>
+
       <div class="card mix selected all">
-        <div class="card-header" id="mobile-title">
-          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#mobile-info" aria-expanded="false" aria-controls="mobile-info">Qiushichao Mobile</h2>
+        <div class="card-header" id="ant-title">
+          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#ant-info" aria-expanded="false" aria-controls="ant-info"><span>01 </span> - Ants vs Unicorn</h2>
         </div>
-        <div id="mobile-info" class="collapse" aria-labelledby="mobile-title" data-parent="#right-container" data-image="./images/mobile-banner.png">
+        <div id="ant-info" class="collapse" aria-labelledby="ant-title" data-parent="#content" data-image="./images/blank-banner.png">
           <div class="card-body">
-            <h3>_intro</h3>
-            <p>Everyday calendar app designed for university students <br> to organize their academic calendar and find more club activities in leisure life <br> launched in 2016</p>
-            <h3>_duration</h3>
-            <p>11/ 2015 - 10/ 2016 </p>
-            <h3>_client</h3>
-            <p>Qiushichao Team, Zhejiang University</p>
-            <h3>_scope</h3>
-            <p>User Research, Mobile App Interaction Design</p>
-            <a class="btn btn-primary" href="./mobile/" role="button"> Read More > </a>
+            <h4>What high-level view I learned from working for Alipay in Ant Finiancial</h4>
+            <!-- <h3>_duration</h3> -->
+            <p>05/ 2018 - 08/ 2018 |
+            <!-- <h3>_client</h3> -->
+            Alipay Team, Ant Finiancial, Alibaba Group |
+            <!-- <h3>_scope</h3> -->
+            User Design / Engineer Intern</p>
+            <!-- <a class="btn btn-primary" href="./ant/" role="button"> Read More > </a> -->
+            <p class="upcoming">Upcoming in Nov</p>
           </div>
         </div>
       </div>
 
-      <div class="card mix all">
-        <div class="card-header" id="inneref-title">
-          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#inneref-info" aria-expanded="false" aria-controls="inneref-info">Inneref / Empjoy</h2>
+      <div class="category mix all">
+        <span>UI/UX</span>
+      </div>
+
+      <div class="card mix selected all">
+        <div class="card-header" id="mobile-title">
+          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#mobile-info" aria-expanded="false" aria-controls="mobile-info"><span>02 </span> - Qiushichao Mobile</h2>
         </div>
-        <div id="inneref-info" class="collapse" aria-labelledby="inneref-title" data-parent="#right-container" data-image="./images/blank-banner.png">
+        <div id="mobile-info" class="collapse" aria-labelledby="mobile-title" data-parent="#content" data-image="./images/mobile-banner.png">
+          <div class="card-body">
+            <h4>Redefine a new school lifestyle with more fun, accessible for everyone in one touch</h4>
+            <!-- <h3>_intro</h3>
+            <p>Everyday calendar app designed for university students <br> to organize their academic calendar and find more club activities in leisure life <br> launched in 2016</p>
+            <h3>_duration</h3> -->
+            <p>11/ 2015 - 10/ 2016 |
+            <!-- <h3>_client</h3> -->
+            Qiushichao Team, Zhejiang University |
+            <!-- <h3>_scope</h3> -->
+            User Research, Mobile App Interaction Design</p>
+            <a class="btn btn-primary" href="./mobile/" role="button"> Read more > </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- <div class="card mix all">
+        <div class="card-header" id="inneref-title">
+          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#inneref-info" aria-expanded="false" aria-controls="inneref-info"><span>03 </span> - Inneref / Empjoy</h2>
+        </div>
+        <div id="inneref-info" class="collapse" aria-labelledby="inneref-title" data-parent="#content" data-image="./images/blank-banner.png">
           <div class="card-body">
             <h3>_intro</h3>
             <p>engagement app for new employees in CHI competition<br> designed for enterprise</p>
@@ -96,54 +121,56 @@
             <p class="upcoming">Upcoming Soon</p>
           </div>
         </div>
+      </div> -->
+      <div class="card mix all">
+        <div class="card-header" id="clip-title">
+          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#clip-info" aria-expanded="false" aria-controls="clip-info"><span>03 </span> - Sketch Clip</h2>
+        </div>
+        <div id="clip-info" class="collapse" aria-labelledby="clip-title" data-parent="#content" data-image="./images/blank-banner.png">
+          <div class="card-body">
+            <!-- <h3>_intro</h3> -->
+            <h4>What will Git for Designer look like... What? OK... You don't know Git...</h4>
+            <!-- <p>Efficient new tech to design collaboration</p> -->
+            <!-- <h3>_duration</h3> -->
+            <p>01 /2018 - 05 /2018 |
+            <!-- <h3>_course</h3> -->
+            Interaction Design Course Project |
+            <!-- <h3>_scope</h3> -->
+            Interaction Design, Prototype</p>
+            <a class="btn btn-primary" href="./clip/" role="button"> Read more > </a>
+            <!-- <p class="upcoming">Fixing...</p> -->
+          </div>
+        </div>
       </div>
 
       <div class="card mix selected all">
         <div class="card-header" id="smartpill-title">
-          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#smartpill-info" aria-expanded="false" aria-controls="smartpill-info">SmartPill</h2>
+          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#smartpill-info" aria-expanded="false" aria-controls="smartpill-info"><span>04 </span> - SmartPill</h2>
         </div>
-        <div id="smartpill-info" class="collapse" aria-labelledby="smartpill-title" data-parent="#right-container" data-image="./images/smartpill-banner.png">
+        <div id="smartpill-info" class="collapse" aria-labelledby="smartpill-title" data-parent="#content" data-image="./images/smartpill-banner.png">
           <div class="card-body">
-            <h3>_intro</h3>
-            <p>Pocket pharmacist app strategy design with martketing plan <br>for busy patients and chronic disease patients</p>
-            <h3>_duration</h3>
-            <p>3/ 2015 - 6/ 2015 </p>
-            <h3>_course</h3>
-            <p>Chinese Business Culture and Entrepreneurship, Zhejiang University</p>
-            <h3>_scope</h3>
-            <p>Market Research, Business Process Design, Strategy, UI Design</p>
-            <a class="btn btn-primary" href="./smartpill/" role="button"> Read More > </a>
+            <!-- <h3>_intro</h3> -->
+            <h4>Fulfill the urgent need of busy patients and chronic disease patients in China in alternative ways</h4>
+            <!-- <h3>_duration</h3> -->
+            <p>03/ 2015 - 06/ 2015 |
+            <!-- <h3>_course</h3> -->
+            Business Culture and Entrepreneurship, Zhejiang University |
+            <!-- <h3>_scope</h3> -->
+            Market Research, Business Process Design, Strategy</p>
+            <a class="btn btn-primary" href="./smartpill/" role="button"> Read more > </a>
           </div>
         </div>
       </div>
 
-      <div class="card mix all">
-        <div class="card-header" id="clip-title">
-          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#clip-info" aria-expanded="false" aria-controls="clip-info">Clip</h2>
-        </div>
-        <div id="clip-info" class="collapse" aria-labelledby="clip-title" data-parent="#right-container" data-image="./images/blank-banner.png">
-          <div class="card-body">
-            <h3>_intro</h3>
-            <p>Efficient new tech to design collaboration</p>
-            <h3>_duration</h3>
-            <p>Ongoing </p>
-            <!-- <h3>_course</h3>
-            <p>Chinese Business Culture and Entrepreneurship, Zhejiang University</p> -->
-            <h3>_scope</h3>
-            <p>Interaction Design, Prototype</p>
-            <a class="btn btn-primary" href="./clip/" role="button"> Read More > </a>
-          </div>
-        </div>
-      </div>
 
-      <div class="category mix all">
+      <!-- <div class="category mix all">
         <span>_RESEARCH</span>
       </div>
       <div class="card mix all">
         <div class="card-header" id="civicrm-title">
           <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#civicrm-info" aria-expanded="false" aria-controls="civicrm-info">CiviCRM<sup>nz</sup></h2>
         </div>
-        <div id="civicrm-info" class="collapse" aria-labelledby="civicrm-title" data-parent="#right-container" data-image="./images/civicrm-banner.png">
+        <div id="civicrm-info" class="collapse" aria-labelledby="civicrm-title" data-parent="#content" data-image="./images/civicrm-banner.png">
           <div class="card-body">
             <h3>_intro</h3>
             <p>Consulting with Neutral Zone and reshaping experiences <br> of tracking members and programs in CiviCRM system</p>
@@ -156,46 +183,46 @@
             <a class="btn btn-primary" href="./civicrm/" role="button"> Read More > </a>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="category mix all">
-        <span>_ARCHITECTURE</span>
+        <span>OTHERS</span>
       </div>
 
       <div class="card mix selected all">
         <div class="card-header" id="inforest-title">
-          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#inforest-info" aria-expanded="false" aria-controls="inforest-info">InForest Space</h2>
+          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#inforest-info" aria-expanded="false" aria-controls="inforest-info"><span>05 </span> - InForest Space</h2>
         </div>
-        <div id="inforest-info" class="collapse" aria-labelledby="inforest-title" data-parent="#right-container" data-image="./images/inforest-banner.png">
+        <div id="inforest-info" class="collapse" aria-labelledby="inforest-title" data-parent="#content" data-image="./images/inforest-banner.png">
           <div class="card-body">
-            <h3>_intro</h3>
-            <p>Interactive artifact and space design<br>to invoke dreams of forest in heavy city mist</p>
-            <h3>_duration</h3>
-            <p>5/ 2016 - 11/ 2016 </p>
-            <h3>_program</h3>
-            <p>Student Research Training Program, Zhejiang University</p>
-            <h3>_scope</h3>
-            <p>Technology Research, Interaction Design, Architecture Design</p>
-            <a class="btn btn-primary" href="./inforest/" role="button"> Read More > </a>
+            <!-- <h3>_intro</h3> -->
+            <h4>Invoke deep dreams of forest in heavy city mist by a beatiful heart travel</h4>
+            <!-- <h3>_duration</h3> -->
+            <p>05/ 2016 - 11/ 2016 |
+            <!-- <h3>_program</h3> -->
+            Student Research Training Program, Zhejiang University |
+            <!-- <h3>_scope</h3> -->
+            Technology Research, Interaction Design, Architecture Design</p>
+            <a class="btn btn-primary" href="./inforest/" role="button"> Read more > </a>
           </div>
         </div>
       </div>
 
       <div class="card mix all">
         <div class="card-header" id="animal-title">
-          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#animal-info" aria-expanded="false" aria-controls="animal-info">The Edge : Animal Shelter Design</h2>
+          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#animal-info" aria-expanded="false" aria-controls="animal-info"><span>06 </span> - The Edge : Animal Shelter Design</h2>
         </div>
-        <div id="animal-info" class="collapse" aria-labelledby="animal-title" data-parent="#right-container" data-image="./images/edge-banner.png">
+        <div id="animal-info" class="collapse" aria-labelledby="animal-title" data-parent="#content" data-image="./images/edge-banner.png">
           <div class="card-body">
-            <h3>_intro</h3>
-            <p>Start with a view of animals <br>make an shelter for us animals <br>all the way from fund to adoption </p>
-            <h3>_duration</h3>
-            <p>9/ 2015 - 11/ 2015 </p>
-            <h3>_course</h3>
-            <p>Architecture Design, Zhejiang University</p>
-            <h3>_scope</h3>
-            <p>'Product' Research, Architecture Design</p>
-            <a class="btn btn-primary" href="./edge/" role="button"> Read More > </a>
+            <!-- <h3>_intro</h3> -->
+            <h4>Design for animals with a view of animals to make an shelter for us animals - all the way from fund to adoption </h4>
+            <!-- <h3>_duration</h3> -->
+            <p>09/ 2015 - 11/ 2015 |
+            <!-- <h3>_course</h3> -->
+            Architecture Design, Zhejiang University |
+            <!-- <h3>_scope</h3> -->
+            'Product' Research, Architecture Design</p>
+            <a class="btn btn-primary" href="./edge/" role="button"> Read more > </a>
           </div>
         </div>
       </div>
@@ -206,18 +233,18 @@
 
       <div class="card mix selected all">
         <div class="card-header" id="about-title">
-          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#about-info" aria-expanded="false" aria-controls="about-info">Alejandro Wang</h2>
+          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#about-info" aria-expanded="false" aria-controls="about-info"><span>42 </span> - Alejandro Wang</h2>
         </div>
-        <div id="about-info" class="collapse" aria-labelledby="about-title" data-parent="#right-container" data-image="./images/about-banner.png">
+        <div id="about-info" class="collapse" aria-labelledby="about-title" data-parent="#content" data-image="./images/about-banner.png">
           <div class="card-body">
-            <h3>_intro</h3>
-            <p>A synthesized project I've been working on for 24 years.<br>... all right you catch ME!</p>
+            <!-- <h3>_intro</h3> -->
+            <h4>A synthesized project I've been working on for 24 years.<br>... all right you catch ME!</h4>
             <h3>_history</h3>
             <p>I was a <strong>coder</strong> at the beginning. I was an exploring <strong>architect</strong>. I like combination beauty between technology and design. Because once they being together, the mixing magic can make life easier and joyful. That’s
               why I am now learning <strong>Human-Computer Interaction at University of Michigan, Ann Arbor</strong>.</p>
-            <p>I started a <strong>start-up</strong> focus on online education before in China. When I was young, I got help from useful but unusable online tools for learning to code. So the vision of my company Zhimou Tech Inc (the name means intelligence)
+            <!-- <p>I started a <strong>start-up</strong> focus on online education before in China. When I was young, I got help from useful but unusable online tools for learning to code. So the vision of my company Zhimou Tech Inc (the name means intelligence)
               was to help new coding learners to get on the right track and share ideas with the others by new technology and enjoyable design. As one of the co-founder, I almost did everything - design, coding, networking, advertising, and management.
-              I always want to expand myself with more skills and knowledge. But my focus is still design - the only thing I urge to dig in forever.</p>
+              I always want to expand myself with more skills and knowledge. But my focus is still design - the only thing I urge to dig in forever.</p> -->
             <h3>_now</h3>
             <p>I am still exploring the world of coding and designing at the same time, especially the method of <strong>interaction design, user research, usability test, prototype coding</strong> and more at school. By some small projects, I realize my
               efforts can work out to help local community and organizations. I really enjoy my way of design - help people near me to solve their problems, then push it forward and broader. </p>
@@ -230,16 +257,16 @@
           </div>
         </div>
       </div>
-
+<!--
       <div class="category mix selected">
         <a href="javascript:void(0)" class="control" data-filter=".all">+ SEE MORE</a>
       </div>
 
       <div class="category mix all">
         <a href="javascript:void(0)" class="control" data-filter=".selected">- SEE LESS</a>
-      </div>
+      </div> -->
 
-    </div>
+    <!-- </div> -->
 
     <div class="push"></div>
 
@@ -286,7 +313,6 @@
       "http://alej.wang/images/smartpill-banner.png",
       "http://alej.wang/images/inforest-banner.png",
       "http://alej.wang/images/edge-banner.png",
-      "http://alej.wang/images/civicrm-banner.png",
       "http://alej.wang/images/about-banner.png"
     ]);
   </script>
